# labs-C-

./: README.md
labs-S1/laba-1__S1/: README.md  main.cpp
labs-S1/laba-2__S1/: README.md  main.cpp
labs-S1/laba-3__S1/: README.md  main.cpp
labs-S1/laba-4__S1/: main.cpp
labs-S1/laba-5__S1/: README.md  main.cpp
labs-S1/laba-6__S1/: CMakeLists.txt  README.md  main.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp
labs-S1/laba-7__S1/: MatrixOperations.cpp  MatrixOperations.hpp  README.md  main.cpp
labs-S1/laba-8__S1/: README.md  main.cpp  main_1.cpp  main_2.cpp
labs-S1/laba-9__S1/: README.md  main.cpp
labs-S2/laba-1__S2/: README.md  main.cpp
labs-S2/laba-2__S2/: CMakeLists.txt  README.md  main1.cpp  main2.cpp  main3.cpp
labs-S2/laba-3__S2/: README.md  main.cpp
labs-S2/laba-4__S2/: README.md  main.cpp
labs-S2/laba-5__S2/: README.md  main.cpp
labs-S2/laba-6__S2/: README.md  main.cpp
labs-S2/laba-7__S2/: README.md  main.cpp
labs-S2/laba-8__S2/: CMakeLists.txt  README.md  main.cpp
labs-S2/laba-9__S2/: README.md  main.cpp
labs-S2/laba-9__S2/XruK/: map.h  pig.h  potato.h
labs-S2/не сдано/laba-7__S2/: CMakeLists.txt
labs-S2/не сдано/laba-8__S2/: main.cpp
labs-S2/не сдано/laba-9__S2/: XruK.lnk
labs-S2/не сдано/laba-9__S2/XruK/: CMakeLists.txt  README.md  main.cpp  map.cpp  map.h  pig.cpp  pig.h  potato.cpp  potato.h
